src/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>Work_in_SF_Preference_Proof__c</fullName>
        <label>Work in SF Preference Proof</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Telephone bill</fullName>
                </value>
                <value>
                    <fullName>Cable and internet bill</fullName>
                </value>
                <value>
                    <fullName>Gas bill</fullName>
                </value>
                <value>
                    <fullName>Electric bill</fullName>
                </value>
                <value>
                    <fullName>Garbage bill</fullName>
                </value>
                <value>
                    <fullName>Water bill</fullName>
                </value>
                <value>
                    <fullName>Paystub</fullName>
                </value>
                <value>
                    <fullName>Public benefits record</fullName>
                </value>
                <value>
                    <fullName>School record</fullName>
                </value>
                <value>
                    <fullName>Paystub with employer address</fullName>
                </value>
                <value>
                    <fullName>Letter from employer</fullName>
                </value>
                <value>
                    <fullName>Third-Party Proof of SF Homelessness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_in_SF_Preference_Rank__c</fullName>
        <label>Work in SF Preference Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_in_SF_Preference__c</fullName>
        <formula>IF(Work_in_SF_Count__c &gt; 0, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work in SF Preference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Reviewed_Flagged_Applications__c</fullName>
        <description>Number of Flagged application records (rules that this application is considered duplicate on) where it is considered</description>
        <label># of Reviewed Flagged Applications</label>
        <summaryFilterItems>
            <field>Flagged_Application__c.Review_Status__c</field>
            <operation>equals</operation>
            <value>Reviewed - Duplicate</value>
        </summaryFilterItems>
        <summaryForeignKey>Flagged_Application__c.Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Listing__c</columns>
        <columns>NAME</columns>
        <columns>Application_Submitted_Date__c</columns>
        <columns>Application_Submission_Type__c</columns>
        <columns>Applicant__c</columns>
        <columns>Email__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Date_of_birth__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Housing_Voucher_or_Subsidy__c</columns>
        <columns>Annual_Income__c</columns>
        <columns>Monthly_Income__c</columns>
        <columns>Total_Household_Size__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Applications</fullName>
        <columns>NAME</columns>
        <columns>Application_Submitted_Date__c</columns>
        <columns>Applicant__c</columns>
        <columns>Primary_Applicant__c</columns>
        <columns>Listing__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Draft</value>
        </filters>
        <label>All Applications</label>
    </listViews>
    <listViews>
        <fullName>All_BMR_Rental_Short_Form_Applications</fullName>
        <columns>NAME</columns>
        <columns>COP_Preference_Manual__c</columns>
        <columns>COP_Preference_Member__c</columns>
        <columns>COP_Preference__c</columns>
        <columns>DTHP_Preference_Manual__c</columns>
        <columns>DTHP_Preference_Member__c</columns>
        <columns>DTHP_Preference__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Application__c.BMR_Rental_Short_Form</value>
        </filters>
        <label>All BMR Rental Short-Form Applications</label>
    </listViews>
    <listViews>
        <fullName>COP_Unconfirmed_Applications</fullName>
        <columns>NAME</columns>
        <columns>COP_Preference_Manual__c</columns>
        <columns>COP_Preference_Member_Name__c</columns>
        <columns>COP_Preference_Member_DOB__c</columns>
        <columns>COP_Preference_Member__c</columns>
        <columns>Listing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Application__c.BMR_Rental_Short_Form</value>
        </filters>
        <filters>
            <field>COP_Preference_Manual__c</field>
            <operation>equals</operation>
            <value>Unconfirmed</value>
        </filters>
        <label>COP Unconfirmed Applications</label>
    </listViews>
    <listViews>
        <fullName>DTHP_Unconfirmed_Applications</fullName>
        <columns>NAME</columns>
        <columns>DTHP_Preference_Manual__c</columns>
        <columns>DTHP_Preference_Member_Name__c</columns>
        <columns>DTHP_Preference_Member_DOB__c</columns>
        <columns>DTHP_Preference_Member__c</columns>
        <columns>Listing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Application__c.BMR_Rental_Short_Form</value>
        </filters>
        <filters>
            <field>DTHP_Preference_Manual__c</field>
            <operation>equals</operation>
            <value>Unconfirmed</value>
        </filters>
        <label>DTHP Unconfirmed Applications</label>
    </listViews>
    <nameField>
        <displayFormat>APP-{00000000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <recordTypes>
        <fullName>BMR_Rental_Long_Form</fullName>
        <active>true</active>
        <description>BMR Rental Long Form Application</description>
        <label>BMR Rental Long-Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMR_Rental_Short_Form</fullName>
        <active>true</active>
        <description>BMR Rental Short Form Application</description>
        <label>BMR Rental Short-Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>Multi_Family_Rental_Short_Form</fullName>
        <active>true</active>
        <description>Multi-Family Rental Short Form Application</description>
        <label>Multi-Family Rental Short-Form</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>